'Camera' checkbox doesn't working properly with Rendered viewport #36738

Closed
opened 2013-09-16 14:00:10 +02:00 by Shakanos · 5 comments

%%%--- Operating System, Graphics card ---
Windows 8 x64, GTX560SE

- Blender version with error, and version that worked ---

2.68a, r60131

- Short description of error ---

'Camera' checkbox in 'Ray visibility' doesn't working with Rendered viewport on default scene (with only one mesh-object). F12-render is OK.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached .blend file. Turn on 'Rendered' viewport shading - Cube is visible. Press F12 for render - Cube is invisible.
%%%

%%%--- Operating System, Graphics card --- Windows 8 x64, GTX560SE - Blender version with error, and version that worked --- 2.68a, r60131 - Short description of error --- 'Camera' checkbox in 'Ray visibility' doesn't working with Rendered viewport on default scene (with only one mesh-object). F12-render is OK. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached .blend file. Turn on 'Rendered' viewport shading - Cube is visible. Press F12 for render - Cube is invisible. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%confirmed, I'll look at it.%%%

%%%confirmed, I'll look at it.%%%

%%%@brecht, any clues here? blender_object.cpp visibility function/flags don't seem to affect Cycles render in viewport at all.%%%

%%%@brecht, any clues here? blender_object.cpp visibility function/flags don't seem to affect Cycles render in viewport at all.%%%

%%%This only happens when you have a single object and Dynamic BVH is used. The problem is that it's supposed to do a bitflag visibility test but in this particular case that does not happen, due to there not being any inner node, and object leaf nodes don't do a visibility test.

I fixed it by modifying the BVH build so the top level BVH tree has at least one inner node. Thanks for the help, but this was a pretty obscure bug, so had to fix it myself :)

Fix in svn revision 60177, thanks for the report.%%%

%%%This only happens when you have a single object and Dynamic BVH is used. The problem is that it's supposed to do a bitflag visibility test but in this particular case that does not happen, due to there not being any inner node, and object leaf nodes don't do a visibility test. I fixed it by modifying the BVH build so the top level BVH tree has at least one inner node. Thanks for the help, but this was a pretty obscure bug, so had to fix it myself :) Fix in svn revision 60177, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36738
No description provided.