Fix #36738: object ray visibility flags not working in cycles viewport if there is only a single object in the scene.